tests/ui/derive_errors.stderr
error: AllocZeroed can only be derived for structs
  --> tests/ui/derive_errors.rs:11:6
   |
11 | enum InvalidEnum {
   |      ^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/derive_errors.rs:14:2
   |
14 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/derive_errors.rs`

error[E0277]: the trait bound `String: AllocZeroed` is not satisfied
 --> tests/ui/derive_errors.rs:4:10
  |
4 | #[derive(AllocZeroed)]
  |          ^^^^^^^^^^^ the trait `AllocZeroed` is not implemented for `String`
  |
  = help: the following other types implement trait `AllocZeroed`:
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
            (A,)
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `AllocZeroed` (in Nightly builds, run with -Z macro-backtrace for more info)
